// prisma/schema.prisma

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

model AnimalType {
  id                 String   @id @default(uuid())
  name               String   @unique // "cat", "dog", "alien"
  displayName        String // "Chat", "Chien", "Alien"
  hungerDecayRate    Float    @default(2.0)
  happinessDecayRate Float    @default(1.5)
  energyDecayRate    Float    @default(1.0)
  healthDecayRate    Float    @default(3.0)
  emoji              String // 🐱 🐶 👽
  animals            Animal[]
}

model Animal {
  id        String     @id @default(uuid())
  name      String
  typeId    String
  hunger    Int        @default(100)
  happiness Int        @default(100)
  health    Int        @default(100)
  energy    Int        @default(100)
  age       Int        @default(0) // in hours
  createdAt DateTime   @default(now())
  updatedAt DateTime   @default(now())
  isAlive   Boolean    @default(true)
  type      AnimalType @relation(fields: [typeId], references: [id])
  actions   Action[]
}

model Action {
  id              String   @id @default(uuid())
  animalId        String
  actionType      String // "feed", "play", "heal", "sleep", "use_item"
  itemId          String?
  timestamp       DateTime @default(now())
  // Stats before action
  hungerBefore    Int?
  happinessBefore Int?
  healthBefore    Int?
  energyBefore    Int?
  // Stats after action
  hungerAfter     Int?
  happinessAfter  Int?
  healthAfter     Int?
  energyAfter     Int?
  // Economy
  coinsEarned     Int? // Coins earned from this action
  animal          Animal   @relation(fields: [animalId], references: [id], onDelete: Cascade)
  item            Item?    @relation(fields: [itemId], references: [id])
}

model Item {
  id             String     @id @default(uuid())
  name           String
  type           String // "food", "toy", "medicine"
  hungerBoost    Int        @default(0)
  happinessBoost Int        @default(0)
  healthBoost    Int        @default(0)
  energyBoost    Int        @default(0)
  energyCost     Int        @default(0)
  price          Int        @default(10) // Price in coins
  emoji          String
  description    String
  actions        Action[]
  inventory      Inventory?
}

model Inventory {
  id       String @id @default(uuid())
  itemId   String @unique
  quantity Int    @default(0)
  item     Item   @relation(fields: [itemId], references: [id])
}

// Economy System
model Wallet {
  id              String   @id @default(uuid())
  coins           Int      @default(100) // Starting coins
  lastPassiveGain DateTime @default(now())
  createdAt       DateTime @default(now())
}

model MinigameScore {
  id          String   @id @default(uuid())
  gameType    String // "clicker", etc.
  score       Int
  coinsEarned Int
  playedAt    DateTime @default(now())
}

// Clicker Upgrades System
model ClickerUpgrade {
  id        String   @id @default(uuid())
  type      String   @unique // "multiplier", "time_bonus", "auto_clicker"
  level     Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// ============== FISHING MINI-GAME ==============

model FishSpecies {
  id             String      @id @default(uuid())
  name           String      @unique // "sardine", "trout", etc.
  displayName    String // "Sardine", "Truite"
  emoji          String // 🐟 🐠 🦈
  rarity         String // "common", "uncommon", "rare", "epic", "legendary"
  baseValue      Int // Base coin reward
  difficulty     Int // 1-10 scale for QTE difficulty
  minSize        Int // Minimum size in cm
  maxSize        Int // Maximum size in cm
  locations      String // JSON array of location IDs where found
  baitPreference String // JSON array of preferred bait IDs
  description    String // Flavor text for catalog
  catches        FishCatch[]
}

model FishCatch {
  id           String      @id @default(uuid())
  speciesId    String
  size         Int // Actual size caught (cm)
  coinsEarned  Int
  isFirstCatch Boolean     @default(false)
  caughtAt     DateTime    @default(now())
  locationId   String
  rodId        String
  baitId       String?
  species      FishSpecies @relation(fields: [speciesId], references: [id])
}

model FishingRod {
  id             String  @id @default(uuid())
  name           String  @unique // "bamboo", "wooden", etc.
  displayName    String // "Canne Bambou"
  tier           Int // 1-5
  price          Int // Purchase cost (0 for starter)
  reelZoneBonus  Float   @default(0) // % increase to reel zone size
  catchRateBonus Float   @default(0) // % bonus to catch rate
  rarityBonus    Float   @default(0) // % bonus to rare fish appearance
  description    String
  isOwned        Boolean @default(false)
  isEquipped     Boolean @default(false)
}

model FishingBait {
  id             String  @id @default(uuid())
  name           String  @unique // "worm", "bread", etc.
  displayName    String // "Ver", "Pain"
  emoji          String // 🪱 🍞
  price          Int // Price per unit
  catchRateBonus Float   @default(0) // General catch rate bonus
  maxUses        Int     @default(1) // How many times can be used (1 = single use)
  targetRarity   String? // JSON array of rarities it attracts (null = all)
  targetSpecies  String? // JSON array of species IDs it attracts (null = all)
  description    String
  quantity       Int     @default(0) // Inventory quantity
}

model FishingLocation {
  id            String  @id @default(uuid())
  name          String  @unique // "pond", "river", etc.
  displayName   String // "Étang", "Rivière"
  emoji         String // 🏞️ 🌊
  unlockCost    Int // Coins to unlock (0 for starter)
  difficulty    Float   @default(1.0) // Base difficulty multiplier
  availableFish String // JSON array of species IDs available here
  description   String
  isUnlocked    Boolean @default(false)
  unlockOrder   Int     @default(0) // Order in which locations unlock
}

model FishingUpgrade {
  id        String   @id @default(uuid())
  type      String   @unique // "luck", "reflexes", "value", "bait_efficiency"
  level     Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model FishingProgress {
  id              String   @id @default(uuid())
  level           Int      @default(1)
  experience      Int      @default(0)
  totalFishCaught Int      @default(0)
  largestFishId   String? // Species ID of largest fish
  largestFishSize Int? // Size of largest fish caught
  currentStreak   Int      @default(0)
  bestStreak      Int      @default(0)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}
